# 23D0872

./: README.md  my_map.pgm  my_map.yaml
bme_ros2_navigation_py/: setup.cfg
bme_ros2_simple_arm/config/: gz_bridge.yaml
bme_ros2_simple_arm/launch/: spawn_robot.launch.py
bme_ros2_simple_arm/urdf/: mogi_arm.xacro
bme_ros2_simple_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bme_ros2_simple_arm_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml
bme_ros2_simple_arm_moveit_config/launch/: demo.launch.py  rsp.launch.py  setup_assistant.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
bme_ros2_simple_arm_py/: package.xml  setup.py
custom_ik_arm/: setup.cfg  setup.py
custom_ik_arm/custom_ik_arm/: trajectory_publisher.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bme_ros2_navigation/share/bme_ros2_navigation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/bme_ros2_navigation_py/lib/bme_ros2_navigation_py/: send_initialpose  slam_toolbox_load_map
install/bme_ros2_navigation_py/share/bme_ros2_navigation_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bme_ros2_simple_arm/share/bme_ros2_simple_arm/: local_setup.dsv  package.bash  (+4 more)
install/nav2_patrol/share/nav2_patrol/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
mogi_trajectory_server/: README.md
nav2_patrol/: setup.cfg  setup.py
nav2_patrol/nav2_patrol/: patrol_node.py  waypoint_patroller.py
(+48 files in other folders)
